# Trend-Impact-on-Book-Sales

./: .gitignore  PROJECT1_SUMMARY.md  README.md  Supabase Snippet Retrieve all books.csv  google_trends_econ_new.py  new_trends_crawling.py  pyproject.toml  requirements.txt  visualize_market_trends.py
